--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Driving Recorder</string>
+    <string name="start">开始</string>
+    <string name="stop">暂停</string>
 </resources>
