--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">行车记录</string>
+    <string name="app_setting">设置</string>
     <string name="start">开始</string>
     <string name="stop">结束</string>
 </resources>
